--- a/package.json
+++ b/package.json
@@ -1,37 +1,26 @@
 {
-  "name": "todo-list-frontend",
+  "name": "nuxt-app",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@formkit/i18n": "^1.6.9",
     "@formkit/icons": "^1.6.9",
+    "@formkit/nuxt": "^1.6.9",
     "@formkit/themes": "^1.6.9",
     "@formkit/vue": "^1.6.9",
-    "axios": "^1.10.0",
-    "pinia": "^3.0.3",
-    "vue": "^3.5.13",
+    "@pinia/nuxt": "^0.11.2",
+    "nuxt": "^4.0.1",
+    "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.34.1",
-    "@typescript-eslint/parser": "^8.34.1",
-    "@vitejs/plugin-vue": "^5.2.3",
-    "@vue/tsconfig": "^0.7.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.29.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.5.0",
-    "eslint-plugin-vue": "^10.2.0",
-    "postcss": "^8.5.5",
-    "tailwindcss": "^4.1.10",
-    "typescript": "~5.8.3",
-    "vite": "^6.3.5",
-    "vue-tsc": "^2.2.8"
+    "@nuxtjs/tailwindcss": "^6.14.0"
   }
 }
