--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@formkit/themes": "^1.6.9",
     "@formkit/vue": "^1.6.9",
     "@pinia/nuxt": "^0.11.2",
+    "formkit": "^1.6.9",
     "nuxt": "^4.0.1",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
