--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@pinia/nuxt": "^0.11.2",
     "formkit": "^1.6.9",
     "nuxt": "^4.0.1",
+    "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
