--- a/nginx.conf
+++ b/nginx.conf
@@ -3,12 +3,24 @@ upstream nuxt_app {
     keepalive 32;
 }
 
+upstream backend_api {
+    server backend:3001;
+    keepalive 32;
+}
+
+upstream files_api {
+    server files-app:8080;
+    keepalive 32;
+}
+
 server {
     listen 80;
     server_name _;
     
+    # Безопасность
     server_tokens off;
     
+    # Gzip сжатие
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
@@ -20,17 +32,19 @@ server {
         application/javascript
         application/xml+rss
         application/json;
-    
-    # Статические файлы
+
+    # Статические файлы Nuxt
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
         add_header Vary "Accept-Encoding";
         access_log off;
+        proxy_pass http://nuxt_app;
     }
     
-    location ~ ^/api/ {
-        proxy_pass http://nuxt_app;
+    # Backend API
+    location /api/ {
+        proxy_pass http://backend_api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -39,11 +53,31 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
     }
     
+    # Files API
+    location /files/ {
+        proxy_pass http://files_api/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 300s;
+        client_max_body_size 100M;
+    }
+    
+    # Основное приложение Nuxt
     location / {
         proxy_pass http://nuxt_app;
         proxy_http_version 1.1;
@@ -55,20 +89,12 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
         
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
         
         proxy_buffering on;
         proxy_buffer_size 4k;
         proxy_buffers 8 4k;
-        
-        expires -1;
-        add_header Cache-Control "no-store, no-cache, must-revalidate";
-    }
-    
-    location /health {
-        access_log off;
-        proxy_pass http://nuxt_app;
     }
 }
