🔧 chore(docker): added dev and prod modes and corrected the readme

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
-NUXT_PUBLIC_API_URL=
-NUXT_PUBLIC_FILES_URL=
+# ===== DEVELOPMENT =====
+# NODE_ENV=development
+# BUILD_TARGET=development
+# CONTAINER_NAME=nuxt-dev
+# NGINX_PORTS=8080:80
+# NGINX_CONFIG=dev
+# CHOKIDAR_USEPOLLING=true
+# VOLUME_MOUNT=.:/app
+# NUXT_PORTS=3000:3000
+
+# ===== PRODUCTION =====
+# NODE_ENV=production
+# BUILD_TARGET=production
+# CONTAINER_NAME=nuxt-prod
+
+# ===== COMMON =====
+# NUXT_PUBLIC_API_URL=http://localhost:3001/api/
+# NUXT_PUBLIC_FILES_URL=http://localhost:8080
