--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "postinstall": "nuxt prepare",
     "start": "nuxt start",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up",
+    "docker:dev:build": "docker-compose -f docker-compose.dev.yml build",
+    "docker:prod": "docker-compose --env-file .env.production up -d",
+    "docker:prod:build": "docker-compose --env-file .env.production build",
+    "docker:down": "docker-compose down"
   },
   "dependencies": {
     "@formkit/i18n": "^1.6.9",
