--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,4 @@
 {
-  // https://nuxt.com/docs/guide/concepts/typescript
   "files": [],
-  "extends": "./.nuxt/tsconfig.json",
-  "compilerOptions": {
-    "types": ["@pinia/nuxt", "@nuxtjs/tailwindcss", "@formkit/nuxt"]
-  }
+  "extends": "./.nuxt/tsconfig.json"
 }
